--- a/Zh/resources/assets/css/inc.css
+++ b/Zh/resources/assets/css/inc.css
@@ -13,18 +13,18 @@ table{border-collapse:collapse;border-spacing:0;}
 .clear{ width:0; height:0;clear:both;font-size:0;line-height:0}
 .top1{ height:1px; overflow: hidden}
 body{
-    transform:scale(1) !important; transform-origin: top left;
+    transform:scale(1) !important; transform-origin: top left; background-color: #000;
 }
 body, #CC{
     width:1920px; height:1080px; overflow: hidden;
-    position: relative; background-color: #f0e7e1;
+    position: relative;
     perspective: 3000px; transform-style: preserve-3d;
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
 }
 .cc{
     position: absolute; left: 0; top: 0;
-    width: 100%; height: 100%; display: none;
+    width: 100%; height: 100%; display: none;  background-color: #f0e7e1;
     perspective: 3000px; transform-style: preserve-3d;
 }
 #_unable{
