--- a/Zh/resources/app/client/css/index.css
+++ b/Zh/resources/app/client/css/index.css
@@ -117,6 +117,7 @@
     position: absolute;
     left: 4px; top: 4px;
     width: 192px; height: 192px;
+    overflow: hidden;
 }
 #Index ._boxs .boxs_tit{
     position: absolute;
