--- a/Zh/resources/app/client/css/word.css
+++ b/Zh/resources/app/client/css/word.css
@@ -36,6 +36,7 @@
     position: absolute;
     left: 4px; top: 4px;
     width: 192px; height: 192px;
+    overflow: hidden;
 }
 .Word .box .left .act{
     position: absolute;
