--- a/Zh/resources/app/client/css/word.css
+++ b/Zh/resources/app/client/css/word.css
@@ -1,5 +1,8 @@
 ﻿@charset "utf-8";
-.Word{
+.Word{ background: inherit}
+.Word .bgx{
+    position: absolute; top: 0; left: 0;
+    width: 100%; height: 100%;
     background:rgba(0,0,0,0.3);
 }
 .Word .box{
